# go2_ws

./: .gitignore  README.md  activate_workspace.sh  install_petting_zoo_dependencies.sh  requirements.txt  review_res.md
src/: requirements.txt
src/go2_dance_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/go2_dance_orchestrator/config/: dance_commands.yaml
src/go2_dance_orchestrator/go2_dance_orchestrator/config/: __init__.py  dance_config.py
src/go2_dance_orchestrator/launch/: single_command_test.launch.py
src/go2_dance_orchestrator/test/: test_copyright.py  test_dance_sequence.py  test_flake8.py  test_pep257.py  test_single_command.py
src/go2_interfaces/: CMakeLists.txt
src/go2_interfaces/srv/: ExecuteAction.srv  ExecuteSingleCommand.srv  StartDanceRoutine.srv
src/go2_robot_sdk/: README_ADDITIONAL.md  setup.py
src/go2_robot_sdk/calibration/: front_camera_480.yaml
src/go2_robot_sdk/config/: collision_monitor_minimal.yaml  collision_monitor_params.yaml  full_robot_conf.rviz  mapper_params_online_async.yaml  mapper_params_online_async_light.yaml  mapper_params_simple.yaml  nav2_params.yaml  nav2_params_simple.yaml  navigate_to_pose_w_replanning_and_recovery_custom.xml
src/go2_robot_sdk/go2_robot_sdk/: main.py
src/go2_robot_sdk/launch/: action_service.launch.py  robot.launch.py
src/go2_robot_ui/go2_robot_ui/: go2_ui_node.py
src/human_interaction/: README.md  package.xml  setup.cfg  setup.py
src/human_interaction/human_interaction/: gesture_recognition_node.py  human_detection_node.py  interaction_manager_node.py
src/keyboard_teleop/: package.xml  setup.py
src/keyboard_teleop/keyboard_teleop/: keyboard_teleop_node.py
src/keyboard_teleop/launch/: keyboard_teleop_launch.py
src/navigation_manager/: README.md  package.xml  setup.py
src/navigation_manager/config/: navigation_params.yaml
src/navigation_manager/launch/: navigation_manager.launch.py
src/navigation_manager/navigation_manager/: navigation_coordinator.py
src/scan_restamper/: README.md  package.xml  setup.cfg  setup.py
src/scan_restamper/scan_restamper/: restamp_nav_actions.py  scan_restamper_node.py
src/test_camera/: README.md  package.xml  setup.py
src/test_camera/launch/: simple_camera_test.launch.py  test_system.launch.py  test_system_rviz.launch.py  threaded_camera_only.launch.py
src/test_camera/test_camera/: detection_visualizer.py  rviz_visualizer.py  simple_camera_display.py  test_camera_node.py  test_camera_threaded_node.py
src/test_camera_ui/: README.md  package.xml  setup.cfg  setup.py
src/test_camera_ui/launch/: camera_ui.launch.py  full_camera_system.launch.py
src/test_camera_ui/test_camera_ui/: camera_ui_node.py
src/test_camera_ui/test_camera_ui/ros_interface/: __init__.py  frame_receiver.py
src/test_camera_ui/test_camera_ui/widgets/: __init__.py  camera_display.py
(+30 files in other folders)
