<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_camera</name>
  <version>0.0.0</version>
  <description>Test camera and visualization utilities for robot dog petting zoo system. Provides PC camera feed and PyQt5 visualization UI for testing human detection and gesture recognition.</description>
  <maintainer email="atr-lab@example.com">atr-lab</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>human_interaction</depend>
  <depend>python_qt_binding</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
